src/test/deca/context/valid/sansObjet/NoOperation.deca
// Description:
//   No operation test
//
// Resultats:
//
//
// Historique:
//    cree le 14/01/2020

{
    ;
}
