src/test/deca/context/invalid/class/81-returnInMain.deca
/* Description:
    teste si on peut execute "return" dans le programme

    Historique:
      cree le 22/01/2020
*/

{
  return 1;

}
